added register screen

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ header .search-bar-container #search-bar{
     border-radius: 0.5rem;
 }
 
-.login-form-container{
+.login-form-container, .register-form-container{
     position: fixed;
     top: -120%;
     left: 0;
@@ -134,11 +134,16 @@ header .search-bar-container #search-bar{
     align-items: center;
     justify-content: center;
 }
+.register-form-container.active{
+    top: 0;
+}
 .login-form-container.active{
     top: 0;
 }
 
-.login-form-container form{
+
+
+.login-form-container form, .register-form-container form{
     margin: 2rem;
     padding: 1.5rem 2rem;
     background: #fff;
@@ -146,14 +151,14 @@ header .search-bar-container #search-bar{
     width: 50rem;
 }
 
-.login-form-container form h3{
+.login-form-container form h3, .register-form-container form h3{
     font-size: 3rem;
     text-align: center;
     text-transform: uppercase;
     padding: 1rem 0;
     color: #333;
 }
-.login-form-container form .box{
+.login-form-container form .box, .register-form-container form .box{
     width: 100%;
     padding: 1rem;
     font-size: 1.7rem;
@@ -163,7 +168,7 @@ header .search-bar-container #search-bar{
     text-transform: none;
 }
 
-.login-form-container form .box:focus{
+.login-form-container form .box:focus, .register-form-container form .box:focus{
     border-color: var(--orange);
 }
 
@@ -190,26 +195,26 @@ header .search-bar-container #search-bar{
     color: var(--orange);
 }
 
-.login-form-container form .btn{
+.login-form-container form .btn,.register-form-container form .btn{
     display: block;
     width: 100%;
 }
 
-.login-form-container form p{
+.login-form-container form p, .register-form-container form p{
     padding: .5rem 0;
     font-size: 1.7rem;
     color: #666;
 }
 
-.login-form-container form p a{
+.login-form-container form p a, .register-form-container form p a{
     color: var(--orange);
 }
-.login-form-container form p a:hover{
+.login-form-container form p a:hover, .register-form-container form p a:hover{
     color: #333;
     text-decoration: underline;
 }
 
-.login-form-container #form-close{
+.login-form-container #form-close, .register-form-container #register-close{
     position: absolute;
     top: 2rem;
     right: 3rem;
@@ -525,13 +530,13 @@ header .search-bar-container #search-bar{
 }
 
 .contact .row form .inputBox input, .contact .row form textarea{
-    width: 50%;
+    width: 100%;
     margin: 1rem 0;
     padding: 1rem;
     font-size: 1.7rem;
     color: #333;
     background: #f7f7f7;
-    text-transform: none;
+    text-transform: capitalize;
 }
 
 .contact .row form textarea{
